// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Coverage > renders ScrollShadow component without children and className 1`] = `
<div
  class="overflow-y-auto data-[top-scroll=true]:[mask-image:linear-gradient(0deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[bottom-scroll=true]:[mask-image:linear-gradient(180deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[top-bottom-scroll=true]:[mask-image:linear-gradient(#000,#000,transparent_0,#000_var(--scroll-shadow-size),#000_calc(100%_-_var(--scroll-shadow-size)),transparent)]"
  data-bottom-scroll="false"
  data-orientation="vertical"
  data-top-scroll="false"
  style="--scroll-shadow-size: 40px;"
/>
`;

exports[`Story Snapshots > HideScrollBar 1`] = `
<div>
  <div
    class="overflow-y-auto data-[top-scroll=true]:[mask-image:linear-gradient(0deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[bottom-scroll=true]:[mask-image:linear-gradient(180deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[top-bottom-scroll=true]:[mask-image:linear-gradient(#000,#000,transparent_0,#000_var(--scroll-shadow-size),#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] scrollbar-hide w-[300px] h-[300px]"
    data-bottom-scroll="false"
    data-orientation="vertical"
    data-top-scroll="false"
    style="--scroll-shadow-size: 40px;"
  >
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🦖 Dinosaur who survived by being really good at hide and seek
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍪 Cookie monster's diet coach
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎯 Dart board that never gets bullseyes
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎨 Paint that watched too much reality TV
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧸 Teddy bear who moonlights as a bouncer
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎮 Gaming controller with commitment issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌈 Rainbow that ran out of colors
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🔮 Crystal ball showing only cat videos
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Clown who's afraid of children
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐙 Octopus who can't multitask
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🦖 Dinosaur who survived by being really good at hide and seek
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍪 Cookie monster's diet coach
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎯 Dart board that never gets bullseyes
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎨 Paint that watched too much reality TV
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧸 Teddy bear who moonlights as a bouncer
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎮 Gaming controller with commitment issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌈 Rainbow that ran out of colors
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🔮 Crystal ball showing only cat videos
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Clown who's afraid of children
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐙 Octopus who can't multitask
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Horizontal 1`] = `
<div>
  <div
    class="overflow-x-auto data-[left-scroll=true]:[mask-image:linear-gradient(270deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[right-scroll=true]:[mask-image:linear-gradient(90deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[left-right-scroll=true]:[mask-image:linear-gradient(to_right,#000,#000,transparent_0,#000_var(--scroll-shadow-size),#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] w-[400px] h-[120px]"
    data-left-scroll="false"
    data-orientation="horizontal"
    data-right-scroll="false"
    style="--scroll-shadow-size: 40px;"
  >
    <div
      class="flex space-x-4"
    >
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🎭 Drama Queen
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🦄 Unicorn CEO
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🐸 Frog Prince
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🎪 Circus Manager
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🧙‍♂️ Wizard IT
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🎨 Artist Barista
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🚀 Space Janitor
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🦖 Dino Lawyer
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🎸 Rock Star Chef
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🧸 Teddy Bear Therapist
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🎯 Dart Champion
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🎮 Gaming Grandma
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🌮 Taco Philosopher
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🎪 Clown Doctor
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🔮 Fortune Teller
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🐙 Octopus Accountant
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🎵 Musical Dentist
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🌈 Rainbow Engineer
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🍪 Cookie Architect
        </div>
      </div>
      <div
        class="bg-info-100 hover:bg-info-200 h-20 w-32 flex-none cursor-pointer rounded p-2 text-sm transition-colors"
      >
        <div
          class="text-center font-medium"
        >
          🎭 Method Actor
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > LargeShadow 1`] = `
<div>
  <div
    class="overflow-y-auto data-[top-scroll=true]:[mask-image:linear-gradient(0deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[bottom-scroll=true]:[mask-image:linear-gradient(180deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[top-bottom-scroll=true]:[mask-image:linear-gradient(#000,#000,transparent_0,#000_var(--scroll-shadow-size),#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] w-[300px] h-[400px]"
    data-bottom-scroll="false"
    data-orientation="vertical"
    data-top-scroll="false"
    style="--scroll-shadow-size: 120px;"
  >
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🦖 Dinosaur who survived by being really good at hide and seek
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍪 Cookie monster's diet coach
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎯 Dart board that never gets bullseyes
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎨 Paint that watched too much reality TV
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧸 Teddy bear who moonlights as a bouncer
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎮 Gaming controller with commitment issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌈 Rainbow that ran out of colors
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🔮 Crystal ball showing only cat videos
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Clown who's afraid of children
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐙 Octopus who can't multitask
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🦖 Dinosaur who survived by being really good at hide and seek
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍪 Cookie monster's diet coach
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎯 Dart board that never gets bullseyes
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎨 Paint that watched too much reality TV
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧸 Teddy bear who moonlights as a bouncer
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎮 Gaming controller with commitment issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌈 Rainbow that ran out of colors
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🔮 Crystal ball showing only cat videos
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Clown who's afraid of children
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐙 Octopus who can't multitask
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > SmallShadow 1`] = `
<div>
  <div
    class="overflow-y-auto data-[top-scroll=true]:[mask-image:linear-gradient(0deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[bottom-scroll=true]:[mask-image:linear-gradient(180deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[top-bottom-scroll=true]:[mask-image:linear-gradient(#000,#000,transparent_0,#000_var(--scroll-shadow-size),#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] w-[300px] h-[400px]"
    data-bottom-scroll="false"
    data-orientation="vertical"
    data-top-scroll="false"
    style="--scroll-shadow-size: 15px;"
  >
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🦖 Dinosaur who survived by being really good at hide and seek
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍪 Cookie monster's diet coach
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎯 Dart board that never gets bullseyes
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎨 Paint that watched too much reality TV
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧸 Teddy bear who moonlights as a bouncer
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎮 Gaming controller with commitment issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌈 Rainbow that ran out of colors
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🔮 Crystal ball showing only cat videos
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Clown who's afraid of children
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐙 Octopus who can't multitask
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🦖 Dinosaur who survived by being really good at hide and seek
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍪 Cookie monster's diet coach
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎯 Dart board that never gets bullseyes
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎨 Paint that watched too much reality TV
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧸 Teddy bear who moonlights as a bouncer
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎮 Gaming controller with commitment issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌈 Rainbow that ran out of colors
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🔮 Crystal ball showing only cat videos
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Clown who's afraid of children
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐙 Octopus who can't multitask
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Vertical 1`] = `
<div>
  <div
    class="overflow-y-auto data-[top-scroll=true]:[mask-image:linear-gradient(0deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[bottom-scroll=true]:[mask-image:linear-gradient(180deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[top-bottom-scroll=true]:[mask-image:linear-gradient(#000,#000,transparent_0,#000_var(--scroll-shadow-size),#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] w-[300px] h-[400px]"
    data-bottom-scroll="false"
    data-orientation="vertical"
    data-top-scroll="false"
    style="--scroll-shadow-size: 40px;"
  >
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🦖 Dinosaur who survived by being really good at hide and seek
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍪 Cookie monster's diet coach
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎯 Dart board that never gets bullseyes
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎨 Paint that watched too much reality TV
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧸 Teddy bear who moonlights as a bouncer
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎮 Gaming controller with commitment issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌈 Rainbow that ran out of colors
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🔮 Crystal ball showing only cat videos
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Clown who's afraid of children
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐙 Octopus who can't multitask
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🦖 Dinosaur who survived by being really good at hide and seek
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍪 Cookie monster's diet coach
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎯 Dart board that never gets bullseyes
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎨 Paint that watched too much reality TV
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧸 Teddy bear who moonlights as a bouncer
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎮 Gaming controller with commitment issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌈 Rainbow that ran out of colors
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🔮 Crystal ball showing only cat videos
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Clown who's afraid of children
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐙 Octopus who can't multitask
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🍕 Pizza delivery guy who forgot the pizza
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐢 Turtle racing champion (retired)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎵 Elevator music that makes you question life choices
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🧦 Sock that went missing in the dryer (found!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🚀 Rocket ship powered by coffee
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🐧 Penguin wearing a tuxedo to a beach party
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎪 Circus elephant who learned to juggle
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🌮 Taco Tuesday on a Wednesday (scandal!)
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎭 Drama llama with trust issues
    </div>
    <div
      class="border-default-200 hover:bg-default-50 border-b p-2"
    >
      🎸 Guitar that only plays polka music
    </div>
  </div>
</div>
`;
